adds page endpoint, extends result endpoint, changes db model
