# yaptide/routes/main_routes.py
@@ -1,14 +1,11 @@
 from flask_restful import Api, Resource
 
-from yaptide.routes.auth_routes import (AuthLogIn, AuthLogOut, AuthRefresh,
-                                        AuthRegister, AuthStatus)
+from yaptide.routes.auth_routes import (AuthLogIn, AuthLogOut, AuthRefresh, AuthRegister, AuthStatus)
 from yaptide.routes.batch_routes import Clusters, JobsBatch
 from yaptide.routes.celery_routes import ConvertResource, JobsDirect
-from yaptide.routes.common_sim_routes import (JobsResource,
-                                              InputsResource,
-                                              LogfilesResource,
-                                              ResultsResource)
+from yaptide.routes.common_sim_routes import (JobsResource, InputsResource, LogfilesResource, ResultsResource)
 from yaptide.routes.keycloak_routes import AuthKeycloak
+from yaptide.routes.page_routes import PagesResource
 from yaptide.routes.task_routes import TasksResource
 from yaptide.routes.user_routes import UserSimulations, UserUpdate
 from yaptide.routes.utils.response_templates import yaptide_response
@@ -52,3 +49,4 @@ def initialize_routes(api: Api):
     api.add_resource(AuthKeycloak, "/auth/keycloak")
 
     api.add_resource(Clusters, "/clusters")
+    api.add_resource(PagesResource, "/page")
