# yaptide/static/openapi.yaml
@@ -891,6 +891,20 @@ paths:
           description: Name of a specific estimator to retrieve results for
           schema:
             type: string
+        - in: query
+          name: single_page
+          required: false
+          description: Number of a single page to retrieve.
+          schema:
+            type: integer
+        - in: query
+          name: page_numbers
+          required: false
+          description: List of page numbers to retrieve.
+          schema:
+            type: array
+            items:
+              type: integer
       responses:
         '200':
           description: Includes results of the simulation
@@ -912,6 +926,20 @@ paths:
                         type: string
                       estimator:
                           $ref: '#/components/schemas/Estimator'
+                  - type: object
+                    properties:
+                      message:
+                        type: string
+                      pages:
+                        type: array
+                        items:
+                          $ref: '#/components/schemas/Page'
+                  - type: object
+                    properties:
+                      message:
+                        type: string
+                      page:
+                        $ref: '#/components/schemas/Page'
         '400':
           description: Bad Request - Missing parameters
           content:
@@ -1063,7 +1091,67 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/BasicResponse'
-
+  /page:
+    get:
+      summary: Retrieve pages metadata for a specific estimator
+      parameters:
+        - in: query
+          name: job_id
+          schema:
+            type: string
+        - in: query
+          name: estimator_name
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Includes metadata for the specified estimator's pages.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                  pages_metadata:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        page_number:
+                          type: integer
+                        page_dimension:
+                          type: string
+        '400':
+          description: Bad Request - Missing parameters
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BasicResponse'
+        '401':
+          description: Unauthorized - Invalid credentials
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BasicResponse'
+        '403':
+          description: Forbidden - User not found, log in required, token refresh required or job with provided ID does not belong to the user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BasicResponse'
+        '404':
+          description: Job with provided ID does not exist
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BasicResponse'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BasicResponse'
 # Components
 components:
   securitySchemes:
@@ -1281,6 +1369,9 @@ components:
           items:
             type: object
             description: Page object
+    Page:
+      type: object
+      description: Page object includes .
 
 
 security:
